<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sharksworld</string>
    <string name="button_next_label">&gt;</string>
    <string name="button_prev_label">&lt;</string>
    <string name="button_ok_label">OK</string>
    <string name="comment">comment</string>
    <string name="comments">comments</string>
    <string name="title_activity_post">Post</string>
    <string name="copyright">&#169;Sharksworld 2008&#8211;2014</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_dialog_title">No network connection detected.</string>
    <string name="no_play_dialog_title">No Google Play services detected.</string>
    <string name="login_failed">Login failed. Please try again.</string>
    <string name="comment_failed">Comment post failed. Please try again.</string>
    <string name="please_log_in">Please log in before replying to comments.</string>
    <string name="no_network_dialog_text">Sharksworld for Android requires an Internet connection. App will exit.</string>
    <string name="no_play_dialog_text">Sharksworld will not be able to send new post notifications without Google Play services.</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="new_comment">New Comment</string>
    <string name="prev_comments">Show previous comments</string>
    <string name="no_comments">No comments yet. Pull down to refresh</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_dialog_header">Please provide your Sharksworld user name and password to continue:</string>
    <string name="comment_dialog_header">Write new comment:</string>
    <string name="username">User name:</string>
    <string name="password">Password:</string>
    <string name="remember">Keep me logged in for 30 days?</string>
    <string name="button_login_label">Log in</string>
    <string name="button_cancel_label">Cancel</string>
    <string name="button_comment_label">Post Comment</string>
    <string name="register_text">If you do not have an account, you can register for one at www.sharksworld.co.za</string>
    <string name="reply_hint">Tap comment author\'s picture to reply to a comment</string>
    <string name="recent_comment_hint">Posts with recent comments show with the comment text in green</string>
    <string name="title_activity_new_comment">NewCommentActivity</string>
    <string name="reply_to_start">Replying to </string>
	<string name="reply_to_mid">(Comment </string>
	<string name="reply_to_end">)</string>
</resources>